// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedDate render end of last millennium 1`] = `
<React.Fragment>
  Fri Dec 31 1999 23:59:59 GMT-0500
</React.Fragment>
`;

exports[`FormattedDate render start of this millennium 1`] = `
<React.Fragment>
  Sat Jan 01 2000 00:00:00 GMT-0500
</React.Fragment>
`;
